[gd_scene load_steps=130 format=2]

[ext_resource path="res://sprites/player/v1/player_v1_03.png" type="Texture" id=1]
[ext_resource path="res://sprites/player/v1/player_v1_02.png" type="Texture" id=2]
[ext_resource path="res://sprites/player/v1/player_v1_00.png" type="Texture" id=3]
[ext_resource path="res://sprites/player/v1/player_v1_01.png" type="Texture" id=4]
[ext_resource path="res://sprites/player/v1/player_v1_06.png" type="Texture" id=5]
[ext_resource path="res://sprites/player/v1/player_v1_08.png" type="Texture" id=6]
[ext_resource path="res://sprites/player/v1/player_v1_10.png" type="Texture" id=7]
[ext_resource path="res://sprites/player/v1/player_v1_11.png" type="Texture" id=8]
[ext_resource path="res://sprites/player/v1/player_v1_05.png" type="Texture" id=9]
[ext_resource path="res://sprites/player/v1/player_v1_12.png" type="Texture" id=10]
[ext_resource path="res://sprites/player/v1/player_v1_13.png" type="Texture" id=11]
[ext_resource path="res://sprites/player/v1/player_v1_09.png" type="Texture" id=12]
[ext_resource path="res://sprites/player/v1/player_v1_07.png" type="Texture" id=13]
[ext_resource path="res://sprites/player/v1/player_v1_04.png" type="Texture" id=14]
[ext_resource path="res://Player.gd" type="Script" id=15]
[ext_resource path="res://sprites/player/v1/player_death_0.png" type="Texture" id=16]
[ext_resource path="res://sprites/player/v1/player_death_3.png" type="Texture" id=17]
[ext_resource path="res://sprites/player/v1/player_death_1.png" type="Texture" id=18]
[ext_resource path="res://sprites/player/v1/player_death_2.png" type="Texture" id=19]
[ext_resource path="res://sprites/player/v1/player_death_4.png" type="Texture" id=20]
[ext_resource path="res://sprites/player/v1/player_death_5.png" type="Texture" id=21]
[ext_resource path="res://sprites/player/v1/player_death_6.png" type="Texture" id=22]
[ext_resource path="res://sprites/player/v1/player_death_7.png" type="Texture" id=23]
[ext_resource path="res://sprites/player/v1/player_death_8.png" type="Texture" id=24]
[ext_resource path="res://pickups/hp/hp_picked_0.png" type="Texture" id=25]
[ext_resource path="res://pickups/hp/hp_picked_1.png" type="Texture" id=26]
[ext_resource path="res://pickups/hp/hp_picked_4.png" type="Texture" id=27]
[ext_resource path="res://pickups/hp/hp_picked_2.png" type="Texture" id=28]
[ext_resource path="res://pickups/hp/hp_picked_5.png" type="Texture" id=29]
[ext_resource path="res://pickups/hp/hp_picked_3.png" type="Texture" id=30]
[ext_resource path="res://pickups/armor/armor_picked_0.png" type="Texture" id=31]
[ext_resource path="res://pickups/armor/armor_picked_3.png" type="Texture" id=32]
[ext_resource path="res://pickups/armor/armor_picked_4.png" type="Texture" id=33]
[ext_resource path="res://pickups/armor/armor_picked_5.png" type="Texture" id=34]
[ext_resource path="res://pickups/armor/armor_picked_1.png" type="Texture" id=35]
[ext_resource path="res://pickups/armor/armor_picked_2.png" type="Texture" id=36]
[ext_resource path="res://pickups/ammo/ammo_picked_2.png" type="Texture" id=37]
[ext_resource path="res://pickups/ammo/ammo_picked_5.png" type="Texture" id=38]
[ext_resource path="res://pickups/ammo/ammo_picked_4.png" type="Texture" id=39]
[ext_resource path="res://pickups/ammo/ammo_picked_1.png" type="Texture" id=40]
[ext_resource path="res://pickups/ammo/ammo_picked_0.png" type="Texture" id=41]
[ext_resource path="res://pickups/ammo/ammo_picked_6.png" type="Texture" id=42]
[ext_resource path="res://pickups/ammo/ammo_picked_3.png" type="Texture" id=43]
[ext_resource path="res://sprites/player/v1/player_dodge_1.png" type="Texture" id=44]
[ext_resource path="res://sprites/player/v1/player_swim_idle_0.png" type="Texture" id=45]
[ext_resource path="res://sprites/player/v1/player_swim_idle_1.png" type="Texture" id=46]
[ext_resource path="res://sprites/player/v1/player_swim_0.png" type="Texture" id=47]
[ext_resource path="res://sprites/player/v1/player_swim_2.png" type="Texture" id=48]
[ext_resource path="res://sprites/player/v1/player_swim_3.png" type="Texture" id=49]
[ext_resource path="res://sprites/player/v1/player_swim_1.png" type="Texture" id=50]
[ext_resource path="res://sprites/player/v1/player_swim_idle_3.png" type="Texture" id=51]
[ext_resource path="res://sprites/player/v1/player_swim_idle_2.png" type="Texture" id=52]
[ext_resource path="res://sprites/player/v1/player_swim_up_2.png" type="Texture" id=53]
[ext_resource path="res://sprites/player/v1/player_swim_up_1.png" type="Texture" id=54]
[ext_resource path="res://sprites/player/v1/player_swim_up_0.png" type="Texture" id=55]
[ext_resource path="res://sprites/player/v1/player_swim_up_3.png" type="Texture" id=56]
[ext_resource path="res://sprites/player/v1/player_swim_down_0.png" type="Texture" id=57]
[ext_resource path="res://sprites/player/v1/player_swim_down_1.png" type="Texture" id=58]
[ext_resource path="res://effects/bubbles/swim_bubbles_3.png" type="Texture" id=59]
[ext_resource path="res://effects/bubbles/swim_bubbles_2.png" type="Texture" id=60]
[ext_resource path="res://effects/bubbles/swim_bubbles_0.png" type="Texture" id=61]
[ext_resource path="res://effects/bubbles/swim_bubbles_1.png" type="Texture" id=62]
[ext_resource path="res://sprites/player/v1/player_melee_attack_1.png" type="Texture" id=63]
[ext_resource path="res://sprites/player/v1/player_melee_attack_0.png" type="Texture" id=64]
[ext_resource path="res://sprites/player/v1/player_melee_attack_2.png" type="Texture" id=65]
[ext_resource path="res://sprites/player/v1/player_melee_walk_3.png" type="Texture" id=66]
[ext_resource path="res://sprites/player/v1/player_melee_walk_1.png" type="Texture" id=67]
[ext_resource path="res://sprites/player/v1/player_melee_walk_2.png" type="Texture" id=68]
[ext_resource path="res://sprites/player/v1/player_melee_walk_0.png" type="Texture" id=69]
[ext_resource path="res://sprites/player/v1/player_melee_duck_0.png" type="Texture" id=70]
[ext_resource path="res://sprites/player/v1/player_melee_jump_1.png" type="Texture" id=71]
[ext_resource path="res://sprites/player/v1/player_melee_jump_2.png" type="Texture" id=72]
[ext_resource path="res://sprites/player/v1/player_melee_dodge_1.png" type="Texture" id=73]
[ext_resource path="res://sprites/player/v1/player_melee_jump_3.png" type="Texture" id=74]
[ext_resource path="res://sprites/player/v1/player_melee_jump_0.png" type="Texture" id=75]
[ext_resource path="res://sprites/player/v1/player_melee_death_1.png" type="Texture" id=76]
[ext_resource path="res://sprites/player/v1/player_melee_death_4.png" type="Texture" id=77]
[ext_resource path="res://sprites/player/v1/player_melee_death_6.png" type="Texture" id=78]
[ext_resource path="res://sprites/player/v1/player_melee_death_8.png" type="Texture" id=79]
[ext_resource path="res://sprites/player/v1/player_melee_death_5.png" type="Texture" id=80]
[ext_resource path="res://sprites/player/v1/player_melee_death_0.png" type="Texture" id=81]
[ext_resource path="res://sprites/player/v1/player_melee_death_7.png" type="Texture" id=82]
[ext_resource path="res://sprites/player/v1/player_melee_death_2.png" type="Texture" id=83]
[ext_resource path="res://sprites/player/v1/player_melee_death_3.png" type="Texture" id=84]
[ext_resource path="res://effects/passive/minor_haste/minor_haste_3.png" type="Texture" id=85]
[ext_resource path="res://effects/passive/minor_haste/minor_haste_1.png" type="Texture" id=86]
[ext_resource path="res://effects/passive/minor_haste/minor_haste_2.png" type="Texture" id=87]
[ext_resource path="res://effects/passive/minor_haste/minor_haste_0.png" type="Texture" id=88]
[ext_resource path="res://effects/passive/minor_haste/minor_haste_4.png" type="Texture" id=89]
[ext_resource path="res://effects/passive/minor_haste/minor_haste_6.png" type="Texture" id=90]
[ext_resource path="res://effects/passive/minor_haste/minor_haste_5.png" type="Texture" id=91]
[ext_resource path="res://OxygenBar.tscn" type="PackedScene" id=92]
[ext_resource path="res://effects/dust/dust_wake_onfall_2.png" type="Texture" id=93]
[ext_resource path="res://effects/dust/dust_wake_onfall_0.png" type="Texture" id=94]
[ext_resource path="res://effects/dust/dust_wake_onfall_1.png" type="Texture" id=95]
[ext_resource path="res://fx/run.wav" type="AudioStream" id=96]
[ext_resource path="res://fx/fall.wav" type="AudioStream" id=97]
[ext_resource path="res://fx/death.wav" type="AudioStream" id=98]
[ext_resource path="res://fx/jump.wav" type="AudioStream" id=99]
[ext_resource path="res://fx/swim.wav" type="AudioStream" id=100]
[ext_resource path="res://effects/dust/jump_dust_cloud_6.png" type="Texture" id=101]
[ext_resource path="res://effects/dust/jump_dust_cloud_1.png" type="Texture" id=102]
[ext_resource path="res://effects/dust/jump_dust_cloud_0.png" type="Texture" id=103]
[ext_resource path="res://effects/dust/jump_dust_cloud_4.png" type="Texture" id=104]
[ext_resource path="res://effects/dust/jump_dust_cloud_5.png" type="Texture" id=105]
[ext_resource path="res://effects/dust/jump_dust_cloud_3.png" type="Texture" id=106]
[ext_resource path="res://effects/dust/jump_dust_cloud_2.png" type="Texture" id=107]
[ext_resource path="res://effects/dust/coyote_jump_dust_7.png" type="Texture" id=108]
[ext_resource path="res://effects/dust/coyote_jump_dust_6.png" type="Texture" id=109]
[ext_resource path="res://effects/dust/coyote_jump_dust_3.png" type="Texture" id=110]
[ext_resource path="res://effects/dust/coyote_jump_dust_1.png" type="Texture" id=111]
[ext_resource path="res://effects/dust/coyote_jump_dust_4.png" type="Texture" id=112]
[ext_resource path="res://effects/dust/coyote_jump_dust_2.png" type="Texture" id=113]
[ext_resource path="res://effects/dust/coyote_jump_dust_5.png" type="Texture" id=114]
[ext_resource path="res://effects/dust/coyote_jump_dust_0.png" type="Texture" id=115]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "Shoot",
"speed": 15.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "Run",
"speed": 8.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": false,
"name": "Duck",
"speed": 0.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": false,
"name": "Fall",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "Idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": false,
"name": "Death",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 9 ), ExtResource( 5 ) ],
"loop": true,
"name": "DuckShoot",
"speed": 15.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 7 ) ],
"loop": false,
"name": "Jump",
"speed": 15.0
}, {
"frames": [ ExtResource( 44 ) ],
"loop": false,
"name": "Dodge",
"speed": 3.0
}, {
"frames": [ ExtResource( 57 ), ExtResource( 58 ), ExtResource( 57 ), ExtResource( 58 ) ],
"loop": true,
"name": "SwimDown",
"speed": 2.0
}, {
"frames": [ ExtResource( 45 ), ExtResource( 46 ), ExtResource( 52 ), ExtResource( 51 ) ],
"loop": true,
"name": "Float",
"speed": 2.0
}, {
"frames": [ ExtResource( 47 ), ExtResource( 50 ), ExtResource( 48 ), ExtResource( 49 ) ],
"loop": true,
"name": "Swim",
"speed": 5.0
}, {
"frames": [ ExtResource( 55 ), ExtResource( 54 ), ExtResource( 53 ), ExtResource( 56 ) ],
"loop": true,
"name": "SwimUp",
"speed": 5.0
}, {
"frames": [ ExtResource( 70 ) ],
"loop": false,
"name": "MeleeDuck",
"speed": 0.0
}, {
"frames": [ ExtResource( 69 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 66 ) ],
"loop": true,
"name": "MeleeRun",
"speed": 8.0
}, {
"frames": [ ExtResource( 75 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 74 ) ],
"loop": true,
"name": "MeleeJump",
"speed": 5.0
}, {
"frames": [ ExtResource( 75 ) ],
"loop": false,
"name": "MeleeIdle",
"speed": 0.0
}, {
"frames": [ ExtResource( 73 ) ],
"loop": false,
"name": "MeleeDodge",
"speed": 3.0
}, {
"frames": [ ExtResource( 72 ) ],
"loop": false,
"name": "MeleeFall",
"speed": 0.0
}, {
"frames": [ ExtResource( 64 ), ExtResource( 63 ), ExtResource( 65 ), ExtResource( 65 ), ExtResource( 63 ) ],
"loop": true,
"name": "MeleeAttack",
"speed": 20.0
}, {
"frames": [ ExtResource( 81 ), ExtResource( 76 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 77 ), ExtResource( 80 ), ExtResource( 78 ), ExtResource( 82 ), ExtResource( 79 ) ],
"loop": true,
"name": "MeleeDeath",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.23918, 5.81005 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 31 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 31 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 34 ) ],
"loop": true,
"name": "ArmorPicked",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 28 ), ExtResource( 30 ), ExtResource( 27 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 28 ), ExtResource( 30 ), ExtResource( 27 ), ExtResource( 29 ), ExtResource( 29 ) ],
"loop": true,
"name": "HPPicked",
"speed": 5.0
}, {
"frames": [ ExtResource( 41 ), ExtResource( 40 ), ExtResource( 37 ), ExtResource( 43 ), ExtResource( 39 ), ExtResource( 38 ), ExtResource( 42 ), ExtResource( 41 ), ExtResource( 40 ), ExtResource( 37 ), ExtResource( 43 ), ExtResource( 39 ), ExtResource( 38 ), ExtResource( 42 ) ],
"loop": true,
"name": "AmmoPicked",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 61 ), ExtResource( 62 ), ExtResource( 60 ), ExtResource( 59 ) ],
"loop": true,
"name": "Bubbles",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 88 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 85 ), ExtResource( 89 ), ExtResource( 91 ), ExtResource( 90 ) ],
"loop": true,
"name": "Hasted",
"speed": 25.0
} ]

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0.0133333, 0.306667, 0.973333, 1 )
colors = PoolColorArray( 0.678431, 0.314614, 0.188235, 1, 0.220638, 0.671875, 0.110229, 0.960784, 0.803922, 0, 1, 0.784314, 0.809651, 0.870588, 0.270588, 0.921569 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0.981818 ), 0.0, -0.0193676, 0, 0, Vector2( 1, 0.019428 ), -3.11818, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 1, 5, 1 )
flag_disable_z = true
direction = Vector3( 1, 0.5, 0 )
gravity = Vector3( -75, 25, 0 )
initial_velocity = 55.0
initial_velocity_random = 1.0
angular_velocity = 90.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -100.0
radial_accel_random = 1.0
tangential_accel = 50.0
tangential_accel_random = 0.25
damping = 50.0
damping_random = 0.5
scale = 0.35
scale_random = 1.0
scale_curve = SubResource( 10 )
color_ramp = SubResource( 8 )

[sub_resource type="AnimatedTexture" id=12]
frames = 3
fps = 7.0
frame_0/texture = ExtResource( 94 )
frame_1/texture = ExtResource( 95 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 93 )
frame_2/delay_sec = 0.0

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 115 ), ExtResource( 111 ), ExtResource( 113 ), ExtResource( 110 ), ExtResource( 112 ), ExtResource( 114 ), ExtResource( 109 ), ExtResource( 108 ) ],
"loop": true,
"name": "CoyoteEffect",
"speed": 20.0
} ]

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 103 ), ExtResource( 102 ), ExtResource( 107 ), ExtResource( 106 ), ExtResource( 104 ), ExtResource( 105 ), ExtResource( 101 ), ExtResource( 101 ) ],
"loop": true,
"name": "Dust",
"speed": 20.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_mask = 22
script = ExtResource( 15 )
__meta__ = {
"_edit_group_": true
}

[node name="OxygenBar" parent="." instance=ExtResource( 92 )]
margin_left = -10.7312
margin_top = -14.9003
margin_right = -10.7312
margin_bottom = -14.9003
rect_scale = Vector2( 0.35, 0.25 )

[node name="OxygenTimer" type="Timer" parent="."]

[node name="Player_Anim" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "MeleeAttack"
frame = 4

[node name="Player_Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Player_Duckbox" type="CollisionShape2D" parent="."]
position = Vector2( -1.38886, 2.19294 )
shape = SubResource( 3 )
disabled = true

[node name="MeleeHitPoint" type="Position2D" parent="."]
position = Vector2( 6.19207, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="ShootPoint" type="Position2D" parent="."]
position = Vector2( 10, -1 )

[node name="Player_Cam" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = -180
limit_right = 640
limit_bottom = 180
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 4.0
drag_margin_left = 0.25
drag_margin_top = 0.4
drag_margin_right = 0.25
drag_margin_bottom = 0.4
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="CameraTween" type="Tween" parent="."]

[node name="PulseTween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="PulseStopTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="PickupTween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="PickupStopTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Pick_Anim" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
animation = "AmmoPicked"

[node name="ShootCDTimer" type="Timer" parent="."]
one_shot = true

[node name="MeleeCDTimer" type="Timer" parent="."]
one_shot = true

[node name="WaterSplashTimer" type="Timer" parent="."]
one_shot = true

[node name="Bubbles_Anim" type="AnimatedSprite" parent="."]
position = Vector2( 10.3207, -1.70516 )
frames = SubResource( 5 )
animation = "Bubbles"
frame = 3
playing = true
__meta__ = {
"_edit_group_": true
}

[node name="BubblePosHorizontal" type="Position2D" parent="."]
position = Vector2( 9.20785, 1.27887 )

[node name="BubblePosVertical" type="Position2D" parent="."]
position = Vector2( -9.53674e-07, -7.67321 )

[node name="BubblesOrigin" type="Position2D" parent="."]
position = Vector2( 5.71228, -5.37125 )

[node name="PassiveEffects" type="Node2D" parent="."]

[node name="MinorHaste_Ani" type="AnimatedSprite" parent="PassiveEffects"]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( -14.6293, -0.892015 )
scale = Vector2( 1.75, 1.75 )
frames = SubResource( 6 )
animation = "Hasted"
__meta__ = {
"_edit_group_": true
}

[node name="DustOnLanding" type="Particles2D" parent="."]
position = Vector2( 0, 8 )
rotation = -1.5708
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
preprocess = 2.0
speed_scale = 2.0
explosiveness = 0.5
randomness = 0.25
local_coords = false
process_material = SubResource( 11 )
texture = SubResource( 12 )

[node name="DustRay" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 32 )
collision_mask = 513

[node name="FX" type="Node2D" parent="."]

[node name="RunFX" type="AudioStreamPlayer2D" parent="FX"]
stream = ExtResource( 96 )

[node name="JumpFX" type="AudioStreamPlayer2D" parent="FX"]
stream = ExtResource( 99 )

[node name="FallFX" type="AudioStreamPlayer2D" parent="FX"]
stream = ExtResource( 97 )

[node name="DeathFX" type="AudioStreamPlayer2D" parent="FX"]
stream = ExtResource( 98 )

[node name="SwimFX" type="AudioStreamPlayer2D" parent="FX"]
stream = ExtResource( 100 )

[node name="DustEffects" type="Node2D" parent="."]

[node name="Coyote_Anim" type="AnimatedSprite" parent="DustEffects"]
visible = false
position = Vector2( -10.926, 1.23113 )
frames = SubResource( 13 )
animation = "CoyoteEffect"
flip_h = true

[node name="DustCloud_Anim" type="AnimatedSprite" parent="DustEffects"]
visible = false
position = Vector2( -1, 1.6928 )
frames = SubResource( 14 )
animation = "Dust"

[node name="Coyote_Pos" type="Position2D" parent="DustEffects"]
position = Vector2( -12.1533, -0.0769453 )
[connection signal="timeout" from="OxygenTimer" to="." method="_on_OxygenTimer_timeout"]
[connection signal="animation_finished" from="Player_Anim" to="." method="_on_Player_Anim_animation_finished"]
[connection signal="timeout" from="PulseStopTimer" to="." method="_on_PulseStopTimer_timeout"]
[connection signal="timeout" from="PickupStopTimer" to="." method="_on_PickupStopTimer_timeout"]
[connection signal="animation_finished" from="Pick_Anim" to="." method="_on_Pick_Anim_animation_finished"]
[connection signal="timeout" from="WaterSplashTimer" to="." method="_on_WaterSplashTimer_timeout"]
[connection signal="animation_finished" from="DustEffects/Coyote_Anim" to="." method="_on_Coyote_Anim_animation_finished"]
[connection signal="animation_finished" from="DustEffects/DustCloud_Anim" to="." method="_on_DustCloud_Anim_animation_finished"]
